--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invaders</title>
     <link rel="stylesheet" href="style.css">
+    <script  type="module"  src="./build/index.js"></script>
 </head>
 <body>
     <div id="main-body-container">
@@ -13,6 +14,4 @@
         </div>
     </div>
 </body>
-<script src="config.js"></script>
-<script src="index.js"></script>
 </html>
