added enemies render, style & config change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <div id="main-body-container">
+        <div id="enemy-container">
+        </div>
         <div class="ship-container">
-            <div id="main-ship" class="main-ship"></div>
+            <div id="main-ship" class="main-ship shadow"></div>
         </div>
     </div>
 </body>
