--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Invaders</title>
-    <link rel="stylesheet" href="style.css">
-    <script  type="module"  src="./build/index.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script  type="module"  src="./src/index.ts"></script>
 </head>
 <body>
     <div id="main-body-container">
